--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -2,6 +2,7 @@ nav {
   color: $color-white;
   padding-left: 10vw;
   padding-right: 10vw;
+  width: 100vw;
   display: flex;
   align-items: center;
   justify-content: space-between;
